--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                     kst: "KST",
                     doc_01_001: "NaCl, or Eneciel is a Korean fan of Quackity, and is currently active as an artist and a translator. They are in various teams as a translator or subtitler, posting art on Twitter, and making Animatics or Korean subtitle videos on their YouTube channel.",
                     h2_02: "Interests",
-                    int_q_01: "The biggest interest",
+                    int_q_01: "FAVOURITE",
                 },
                 es : {
                     nacl: "NaCl",
@@ -83,6 +83,8 @@
                     timezone: "Zona horaria",
                     kst: "",
                     doc_01_001: "TBA",
+                    h2_02: "",
+                    int_q_01: "FAVORITO"
                 },
                 ptbr : {
                     nacl: "NaCl",
@@ -183,6 +185,7 @@
                     kst: "한국표준시",
                     doc_01_001: "NaCl 혹은 엔에씨엘은 콰키티의 한국인 팬 중 하나로, 그림러이자 번역러로 활동 중에 있다. 다양한 팀에 번역가 혹은 자막 작업자로 참여하고 있으며, 트위터에는 그림을, 유튜브에는 애니메틱이나 한국어 자막 영상을 업로드한다.",
                     h2_02: "관심사",
+                    int_q_01: "최애"
                 }
             }
         </script>
@@ -190,21 +193,18 @@
     <body>
         <nav>
             <div class="nav_box">
-                <h1>NaCl</h1>
+                <a href="index.html" style="text-decoration: none;"><h1>NaCl</h1></a>
                 <label for="languageSelector"></label>
                 <select id="languageSelector">
                     <option value="en">English</option>
-                    <option value="es">Español</option>
+                    <option value="es">Español</option><!-- 
                     <option value="ptbr">Português</option>
-                    <option value="fr">Français</option>
+                    <option value="fr">Français</option> -->
                     <option value="ko">한국어</option>
                 </select>
             </div>
             <div class="nav_box">
-                <a href="index.html"><h5>Home</h5></a>
                 <a><h5><span>About</span></h5></a>
-                <a><h5>Interests</h5></a>
-                <a><h5>Languages</h5></a>
                 <a><h5>Works</h5></a>
                 <a><h5>Made with</h5></a>
             </div>
