--- a/index.html
+++ b/index.html
@@ -24,21 +24,18 @@
     <body>
         <nav>
             <div class="nav_box">
-                <h1>NaCl</h1>
+                <a href="index.html" style="text-decoration: none;"><h1>NaCl</h1></a>
                 <label for="languageSelector"></label>
                 <select id="languageSelector">
                     <option value="en">English</option>
-                    <option value="es">Español</option>
+                    <option value="es">Español</option><!-- 
                     <option value="ptbr">Português</option>
-                    <option value="fr">Français</option>
+                    <option value="fr">Français</option> -->
                     <option value="ko">한국어</option>
                 </select>
             </div>
             <div class="nav_box">
-                <a><h5><span>Home</span></h5></a>
                 <a href="about.html"><h5>About</h5></a>
-                <a><h5>Interests</h5></a>
-                <a><h5>Languages</h5></a>
                 <a><h5>Works</h5></a>
                 <a><h5>Made with</h5></a>
             </div>
